# photo-curator

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_photo_curator.bat
app/: __init__.py  main.py  paths.py
app/controllers/: library_controller.py
app/ui/: __init__.py  main_window.py
app/views/: __init__.py  delete_review.py  folder_panel.py  photo_grid.py  photo_preview.py  rename_review.py
app/widgets/: metadata_panel.py  photo_tile.py  progress_panel.py
app/workers/: __init__.py  scan_worker.py  thumbnail_worker.py
benchmarks/: after-db-efficiency-2026-07-11-10k.json  after-incremental-rescan-2026-07-11-10k.json  baseline-2026-07-11-10k.json  bench_photo_curator.py
docs/: Architecture.md  Milestone-2-Scope.md  Milestone-3-Scope.md  Milestone-4-Scope.md  Performance-Audit-2026-07-11.md  README.md
engine/: __init__.py
outputs/: Photo-Curator-Handoff-2026-07-10.md  Photo-Curator-Status-2026-07-19.md
tests/: conftest.py  test_database.py  test_delete_controller.py  test_delete_service.py  test_delete_ui.py  test_duplicate_detection.py  test_folder_panel_counts.py  test_grid_scaling.py  test_incremental_scan.py  test_index_batching.py  test_keep_policy.py  test_library_controller.py  test_naming.py  test_rename_service.py  test_scan_worker.py  test_smoke.py  test_thumbnail_lifecycle.py  test_thumbnail_pipeline.py  test_thumbnail_worker.py  test_trash_provider_selection.py  test_trash_providers_macos.py  test_trash_providers_windows.py  test_ui_integration.py  test_undo_service.py  test_windows_recycle_bin.py
(+25 files in other folders)
