[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-curator"
version = "0.1.0"
description = "A desktop application for organizing and searching photo collections."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "PySide6>=6.8",
    "send2trash>=1.8",
    "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.gui-scripts]
photo-curator = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
